fixes grid collapse example for accuracy

--- a/scss/foundation/_settings.scss
+++ b/scss/foundation/_settings.scss
@@ -657,7 +657,7 @@ $include-html-global-classes: $include-html-classes;
 // $input-border-style: solid;
 // $input-border-width: 1px;
 // $input-border-radius: $global-radius;
-// $input-disabled-bg: $gainsboro;
+ $input-disabled-bg: red;
 // $input-disabled-cursor: $cursor-default-value;
 // $input-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 // $input-include-glowing-effect: false;
